# my-powershell

./: Cargo.toml  README.md  build.rs  clippy.toml  my-powershell.json  my-powershell.toml  rustfmt.toml
resources/: my-powershell-startup.toml  my-powershell.json  my-powershell.toml
scripts/: repository.py
src/: constant.rs  main.rs  util.rs
src/core/: job.rs  mod.rs  workflow.rs
